# Workstation

./: .env.template  .gitignore  .jules_state_v60.json  .jules_state_v60_mastery.json  API_REFERENCE.md  ARCHITECTURE.md  BIOLOGICAL_SYSTEMS_GUIDE.md  Build on and enhance the plan; jule.txt  CODEOWNERS  CONSTITUTION_v100.0.0.md  CONSTITUTION_v100.1.0.md  CONSTITUTION_v101.0.0.md  CONSTITUTION_v103.0.0.md  CONSTITUTION_v104.0.0.md  CONSTITUTION_v105.0.0.md  CONSTITUTION_v109.0.0.md  CONSTITUTION_v110.0.0.md  CONSTITUTION_v114.0.0.md  CONSTITUTION_v115.0.0.md  CONSTITUTION_v116.0.0.md  CONSTITUTION_v99.0.0.md  CONTRIBUTING.md  DEPLOYMENT.md  Deepseek further background to Workstation further.txt  Deepseek further background to Workstation.txt  Deepseek workstation background.txt  Design environment script background.txt  FINAL_REPORT.md  JULES PROMPT WORKSTATION PROJECT v9.txt  LLM URL share links.txt  Makefile  MinimaxAi  further background to Workstation Evolutionary cognition.txt  Production environment script background.txt  QUICKSTART.md  Qwen Further background to Workstation Further.txt  Qwen Further background to Workstation.txt  Qwen further background to Workstation Evolutionary cognition.txt  Qwens workstation background Further development.txt  Qwens workstation background.txt  README.md  (+40 more)
agentic_core/: __init__.py  autogen_integrator.py  base_agent.py  crewai_integrator.py  epistemic_integrity.py  ethical_guardian.py  governance_loop.py  langgraph_integrator.py  main.py  meta_cognitive.py  observability.py  orchestrator.py  pcagent_integrator.py  priority_manager.py  project_manager.py  transcendent.py
agents/: physical_ai_agent.py
archive/: conscious_organism_v92.py  conscious_organism_v93.py
backend/: package.json
config/: synthesis_urls.json
dashboard/: app.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  Deepseek_workstation_background_Further_development.txt  USER_GUIDE.md  api_integrations.md  api_spec.yaml  deployment_guide.md  repository_structure.md  troubleshooting.md  v66_enterprise_organism.md  v69_synthetic_organism.md  v70_conscious_organism.md
infrastructure/: render.yaml
meta/: CONSTITUTION_v52.0.md  CONSTITUTION_v52.md  CONSTITUTION_v53.0.md  CONVERGENCE_REPORT_v100.0.json  CONVERGENCE_REPORT_v99.0.0.json  FINAL_RELEASE_REPORT_v100.0.json  FINAL_RELEASE_REPORT_v99.0.0.json  FINAL_VALIDATION_REPORT.json  PHASE_0_VERIFICATION_REPORT.md  REGULATORY_COMPLIANCE.md  SHARIA_AUDIT_v100.0.json  SHARIA_COMPLIANCE_AUDIT_v100.0.json  SHARIA_COMPLIANCE_AUDIT_v99.0.0.json  collective_memory.json  constitution.json  genome_ledger.json  genome_ledger_test.json  ledger.json  phylogenetic_tree.json  synthesis_v100.json  synthesis_v101.json  twins.db  ueg_graph.json  ueg_test.json
mobile/: App.js  package.json
products/qep-sdk/: README.md  pyproject.toml  qep_sdk.py
products/qep-sdk/qep_sdk/: client.py
scripts/: activate_v127_impact.py  audit_constitution.py  audit_constitution_v100.py  audit_iobnt.py  automate_uviap.py  backup.sh  benchmark_v100.py  enhance_v120_constellation.py  final_audit_v100.py  generate_artifacts.py  generate_matrix_v100.py  generate_sub_reactor.py  generate_v100_final_reports.py  generate_v100_reports.py  generate_v120_constellation.py  harden_reactors.py  ingest_qep_sources.py  init-secrets.sh  migrate_v53_to_v60.py  package_products.py  prune_deprecated.py  register_all_reactors.py  register_v120_constellation.py  restore.sh  run_simulated_soak_test.py  run_soak_test_v100_1.py  run_soak_test_v101_0.py  run_v100_synergy_workload.py  run_v101_synthesis.py  setup.sh  setup_v120.py  setup_windows.ps1  start.sh  test_v125_integration.py  v100_mega_twin_demo.py  v100_synergy_demo.py  validate_qep_scholarship.py  verify_environment.py
simulations/: v92_omega_transition_sim.py  v92_omega_transition_sim_short.py  v93_polymath_sim.py  v93_polymath_transition_sim.py
tests/: epistemic_integrity_test.py  test_appetite.py  test_biological_orchestrator.py  test_biological_subsystems.py  test_biological_upgrades.py  test_conscious_organism_v93.py  test_crdt_engine.py  test_ethics.py  test_evolution_repro.py  test_evolution_v2.py  test_final_synthesis.py  test_full_cycle.py  test_genetics.py  test_genomics_reactor.py  test_grand_synthesis.py  test_incubation.py  test_uvaip.py  (+43 more)
(+1387 files in other folders)
