[tool.poetry]
name = "jules-ai"
version = "47.0.0"
description = "Autonomous Multi-Agent Scientific Production Ecosystem (Article AQ-AZ)"
authors = ["Rehan719"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
autogen = "^0.2.27"
pydantic = "^2.7.0"
pyyaml = "^6.0.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
streamlit = "^1.35.0"
redis = "^5.0.4"
sqlalchemy = "^2.0.30"
chromadb = "^0.5.0"
weaviate-client = "^4.6.1"
prefect = "^2.19.0"
openai = "^1.30.1"
anthropic = "^0.26.0"
google-generativeai = "^0.5.4"
transformers = "^4.41.0"
torch = "^2.3.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"
scipy = "^1.13.0"
scikit-learn = "^1.5.0"
whisperx = {git = "https://github.com/m-bain/whisperX.git"}
manim = "^0.18.1"
pygithub = "^2.3.0"
pylatex = "^1.4.2"
jinja2 = "^3.1.4"
python-pptx = "^0.6.21"
# v47.0 New Dependencies
pyro-ppl = "^1.9.0"
tensorflow-probability = "^0.24.0"
ray = "^2.30.0"
celery = "^5.4.0"
web3 = "^6.20.0"
ipfshttpclient = "^0.8.0a2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ruff = "^0.4.4"
mypy = "^1.10.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
