[tool.poetry]
name = "jules-ai"
version = "70.0.0"
description = "Autonomous scientific enterprise organism with cell signaling, genomic networks, and professional competencies."
authors = ["Rehan719"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
autogen = "^0.2.27"
pydantic = "^2.12.5"
pyyaml = "^6.0.3"
fastapi = "^0.129.0"
uvicorn = "^0.41.0"
streamlit = "^1.54.0"
redis = "^7.2.0"
sqlalchemy = "^2.0.30"
chromadb = "^1.5.1"
prefect = "^2.19.0"
openai = "^1.30.1"
transformers = "^4.41.0"
torch = "^2.10.0"
numpy = "^2.4.2"
pandas = "^2.3.3"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"
scipy = "^1.13.0"
scikit-learn = "^1.5.0"
networkx = "^3.6.1"
pyro-ppl = "^1.9.1"
ray = "^2.54.0"
celery = "^5.6.2"
web3 = "^7.14.1"
# Required for Triad/Verification
z3-solver = "^4.14.3.0"
sympy = "^1.14.0"
# qiskit = "^1.3.0" # Might be too heavy, using simulator placeholders if not available
# pennylane = "^0.38.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.4.4"
mypy = "^1.10.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
