[tool.poetry]
name = "jules-ai"
version = "130.0.0"
packages = [
    { include = "agentic_core" },
    { include = "src" },
]
description = "v130.0 Sovereign Digital Life."
authors = ["Rehan719"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
autogen = "^0.9.10"
pydantic = "^2.12.5"
pyyaml = "^6.0.3"
fastapi = "^0.129.0"
uvicorn = "^0.41.0"
streamlit = "^1.54.0"
redis = "^7.2.0"
sqlalchemy = "^2.0.30"
chromadb = "^1.5.1"
prefect = "^2.19.0"
psutil = "^7.2.2"
openai = "^1.30.1"
transformers = "^4.41.0"
torch = "^2.10.0"
numpy = ">=1.26.4,<2.0.0"
shap = ">=0.45.0,<0.46.0"
PyJWT = ">=2.10.0"
pandas = "^2.3.3"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"
scipy = "^1.13.0"
scikit-learn = "^1.5.0"
networkx = "^3.6.1"
pyro-ppl = "^1.9.1"
ray = "^2.12.0"
celery = "^5.4.0"
web3 = "^6.19.0"
# Required for Triad/Verification
z3-solver = "^4.13.0.0"
sympy = "^1.12"
qiskit = "^1.1.0"
pennylane = "^0.36.0"
    camel-tools = "^1.5.2"
    quran-python = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
ruff = "^0.4.4"
mypy = "^1.10.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
